added style.css file

--- a/kid-school/index.html
+++ b/kid-school/index.html
@@ -3,9 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
+    <link rel="stylesheet" href="style.css">
+ </head>
 <body>
-    
-</body>
+    <header>
+        <div class="container">
+    <nav>
+        <ul>
+            <li><a href="#"></a>     
+ <img width="30px" src="c:/Users/SBC/B11-A2-Kids-School/assets/logo.png">School</a></li>
+            <li style="color: coral;">Home</></li>
+            <li style="color: rgb(86, 183, 243);"><a href="#">About</a></li>
+            <li style="color: aqua;"><a href="#">Facilities</a></li>
+            <li style="color: blue;"><a href="#">Admission</a></li>
+        </ul>
+        <button style="background-color: rgba(255, 119, 0, 0.971);">Contact</button>
+    </nav>
+</div>
+</header>
+<section class="hero">
+    <div class="container">
+        <img src="hero-image.png">
+          <h1>  Empowering students from small age towards vision
+        </h1>
+        <p>
+            With the courage,confidence,creativity and compassion to
+             make aunique contribution in a diveerse and dynamic world.
+        </p>
+        <button style="color: black;">Enroll Now</button>
+    </div>
+</section>
+<div class="card-1">
+    <img src="c:/Users/SBC/B11-A2-Kids-School/assets/kinder.png" width="100px">
+    <h2>Kinder (3-6) Years</h2>
+    <p>Kindergerden is the first stage in the move from home to formal education</p>
+    <button>Read More</button>
+    </div>
+    <div class="card-2">
+        <img src="c:/Users/SBC/B11-A2-Kids-School/assets/elementary.png" width="100px" >
+        <h2>Elementory School</h2>
+        <p>Kindergerden is the first stage in the move from home to formal education</p>
+        <button>Read More</button>
+        </div>
+
+        <div class="card-3">
+            <img src="c:/Users/SBC/B11-A2-Kids-School/assets/middle.png" width="100px" >
+            <h2>Middle(10-16)Years</h2>
+            <p>Kindergerden is the first stage in the move from home to formal education</p>
+            <button>Read More</button>
+            </div>
+            <header><h1>Kids Education</h1></header>
+            <nav>
+                <ul>   
+                    <li>Home</></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Facilities</a></li>
+                    <li>Admission</a></li>
+                </ul>
+                </nav>
+                <footer>
+                    <h3>Keep in Touch</h3>
+                   <p> <img src="c:\Users\SBC\B11-A2-Kids-School\assets\fb.png">
+                 <img src="c:\Users\SBC\B11-A2-Kids-School\assets\dribble.png">
+                    <img src="c:\Users\SBC\B11-A2-Kids-School\assets\google+.png">
+                    <img src="c:\Users\SBC\B11-A2-Kids-School\assets\twitter.png"></p>
+                </footer>
+    </body>
 </html>
