--- a/kid-school/index.html
+++ b/kid-school/index.html
@@ -52,7 +52,7 @@
             <p>Kindergerden is the first stage in the move from home to formal education</p>
             <button>Read More</button>
             </div>
-            <header><h1>Kids Education</h1></header>
+            <header></header><h1>Kids Education</h1></header>
             <nav>
                 <ul>   
                     <li>Home</></li>
