added some html & css tage

--- a/kid-school/index.html
+++ b/kid-school/index.html
@@ -37,20 +37,20 @@
     <img src="c:/Users/SBC/B11-A2-Kids-School/assets/kinder.png" width="100px">
     <h2>Kinder (3-6) Years</h2>
     <p>Kindergerden is the first stage in the move from home to formal education</p>
-    <button>Read More</button>
+    <button style="background-color: rgb(215, 238, 250);">Read More</button>
     </div>
     <div class="card-2">
         <img src="c:/Users/SBC/B11-A2-Kids-School/assets/elementary.png" width="100px" >
         <h2>Elementory School</h2>
         <p>Kindergerden is the first stage in the move from home to formal education</p>
-        <button>Read More</button>
+        <button style="background-color: orange;">Read More</button>
         </div>
 
         <div class="card-3">
             <img src="c:/Users/SBC/B11-A2-Kids-School/assets/middle.png" width="100px" >
             <h2>Middle(10-16)Years</h2>
             <p>Kindergerden is the first stage in the move from home to formal education</p>
-            <button>Read More</button>
+            <button style="background-color: blueviolet;">Read More</button>
             </div>
             <header></header><h1>Kids Education</h1></header>
             <nav>
