--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav>
         <ul>
             <li><a href="#"></a>     
- <img width="30px" src="c:/Users/SBC/B11-A2-Kids-School/assets/logo.png">School</a></li>
-            <li style="color: coral;">Home</></li>
+ <img width="30px" src="https://assets.pippa.io/shows/cover/1708103675812-8e0db96945bc76fc4f28501f42183d39.jpeg">School</a></li>
+            <li style="color: coral;">Home</li>
             <li style="color: rgb(86, 183, 243);"><a href="#">About</a></li>
             <li style="color: aqua;"><a href="#">Facilities</a></li>
             <li style="color: blue;"><a href="#">Admission</a></li>
